; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/m5mols/extr_m5mols_core.c_m5mols_busy_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/m5mols/extr_m5mols_core.c_m5mols_busy_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }

@M5MOLS_BUSY_WAIT_DEF_TIMEOUT = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@M5MOLS_I2C_RDY_WAIT_FL = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @m5mols_busy_wait(%struct.v4l2_subdev* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.v4l2_subdev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %5
  %19 = load i32, i32* @M5MOLS_BUSY_WAIT_DEF_TIMEOUT, align 4
  br label %22

20:                                               ; preds = %5
  %21 = load i32, i32* %11, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = phi i32 [ %19, %18 ], [ %21, %20 ]
  store i32 %23, i32* %12, align 4
  %24 = load i64, i64* @jiffies, align 8
  %25 = load i32, i32* %12, align 4
  %26 = call i64 @msecs_to_jiffies(i32 %25)
  %27 = add i64 %24, %26
  store i64 %27, i64* %13, align 8
  br label %28

28:                                               ; preds = %62, %22
  %29 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %7, align 8
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @m5mols_read_u8(%struct.v4l2_subdev* %29, i32 %30, i32* %14)
  store i32 %31, i32* %15, align 4
  %32 = load i32, i32* %15, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %41

34:                                               ; preds = %28
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* @M5MOLS_I2C_RDY_WAIT_FL, align 4
  %37 = and i32 %35, %36
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %41, label %39

39:                                               ; preds = %34
  %40 = load i32, i32* %15, align 4
  store i32 %40, i32* %6, align 4
  br label %67

41:                                               ; preds = %34, %28
  %42 = load i32, i32* %15, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %53, label %44

44:                                               ; preds = %41
  %45 = load i32, i32* %14, align 4
  %46 = load i32, i32* %10, align 4
  %47 = and i32 %45, %46
  %48 = and i32 %47, 255
  %49 = load i32, i32* %9, align 4
  %50 = and i32 %49, 255
  %51 = icmp eq i32 %48, %50
  br i1 %51, label %52, label %53

52:                                               ; preds = %44
  store i32 0, i32* %6, align 4
  br label %67

53:                                               ; preds = %44, %41
  %54 = call i32 @usleep_range(i32 100, i32 250)
  br label %55

55:                                               ; preds = %53
  %56 = load i32, i32* %12, align 4
  %57 = icmp sgt i32 %56, 0
  br i1 %57, label %58, label %62

58:                                               ; preds = %55
  %59 = load i64, i64* %13, align 8
  %60 = call i64 @time_is_after_jiffies(i64 %59)
  %61 = icmp ne i64 %60, 0
  br label %62

62:                                               ; preds = %58, %55
  %63 = phi i1 [ false, %55 ], [ %61, %58 ]
  br i1 %63, label %28, label %64

64:                                               ; preds = %62
  %65 = load i32, i32* @EBUSY, align 4
  %66 = sub nsw i32 0, %65
  store i32 %66, i32* %6, align 4
  br label %67

67:                                               ; preds = %64, %52, %39
  %68 = load i32, i32* %6, align 4
  ret i32 %68
}

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i32 @m5mols_read_u8(%struct.v4l2_subdev*, i32, i32*) #1

declare dso_local i32 @usleep_range(i32, i32) #1

declare dso_local i64 @time_is_after_jiffies(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
